--- a/package.json
+++ b/package.json
@@ -13,5 +13,20 @@
     "nuxt": "^3.11.2",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
+  },
+  "devDependencies": {
+    "@iconify-json/tabler": "^1.1.111",
+    "@nuxt/eslint": "^0.3.10",
+    "@nuxt/fonts": "^0.7.0",
+    "@nuxt/image": "^1.7.0",
+    "@nuxtjs/supabase": "^1.2.2",
+    "@nuxtjs/tailwindcss": "^6.12.0",
+    "@vueuse/nuxt": "^10.9.0",
+    "eslint": "^9.2.0",
+    "radix-vue": "^1.7.4",
+    "sass": "^1.77.0",
+    "slugify": "^1.6.6",
+    "unplugin-icons": "^0.19.0",
+    "unplugin-vue-components": "^0.27.0"
   }
 }
