--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nuxtjs/supabase": "^1.2.2",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@vueuse/nuxt": "^10.9.0",
+    "dayjs-nuxt": "^2.1.9",
     "eslint": "^9.2.0",
     "radix-vue": "^1.7.4",
     "sass": "^1.77.0",
