--- a/package.json
+++ b/package.json
@@ -15,16 +15,40 @@
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@bicou/prosemirror-render-nuxt": "^0.0.6",
+    "@floating-ui/vue": "^1.0.6",
     "@iconify-json/tabler": "^1.1.111",
     "@nuxt/eslint": "^0.3.10",
     "@nuxt/fonts": "^0.7.0",
     "@nuxt/image": "^1.7.0",
     "@nuxtjs/supabase": "^1.2.2",
     "@nuxtjs/tailwindcss": "^6.12.0",
+    "@tiptap/core": "^2.4.0",
+    "@tiptap/extension-bold": "^2.4.0",
+    "@tiptap/extension-bullet-list": "^2.4.0",
+    "@tiptap/extension-dropcursor": "^2.4.0",
+    "@tiptap/extension-focus": "^2.4.0",
+    "@tiptap/extension-heading": "^2.4.0",
+    "@tiptap/extension-history": "^2.4.0",
+    "@tiptap/extension-italic": "^2.4.0",
+    "@tiptap/extension-link": "^2.4.0",
+    "@tiptap/extension-list-item": "^2.4.0",
+    "@tiptap/extension-ordered-list": "^2.4.0",
+    "@tiptap/extension-paragraph": "^2.4.0",
+    "@tiptap/extension-placeholder": "^2.4.0",
+    "@tiptap/extension-strike": "^2.4.0",
+    "@tiptap/extension-text": "^2.4.0",
+    "@tiptap/extension-underline": "^2.4.0",
+    "@tiptap/pm": "^2.4.0",
+    "@tiptap/vue-3": "^2.4.0",
+    "@types/formidable": "^3.4.5",
     "@vueuse/nuxt": "^10.9.0",
+    "cloudinary": "^2.2.0",
     "dayjs-nuxt": "^2.1.9",
     "eslint": "^9.2.0",
-    "radix-vue": "^1.7.4",
+    "h3-formidable": "^1.0.0",
+    "photoswipe": "^5.4.3",
+    "radix-vue": "^1.8.0",
     "sass": "^1.77.0",
     "slugify": "^1.6.6",
     "unplugin-icons": "^0.19.0",
