--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@bicou/prosemirror-render-nuxt": "^0.0.6",
     "@floating-ui/vue": "^1.0.6",
     "@iconify-json/tabler": "^1.1.111",
-    "@nuxt/eslint": "^0.3.10",
     "@nuxt/fonts": "^0.7.0",
     "@nuxt/image": "^1.7.0",
     "@nuxtjs/supabase": "^1.2.2",
@@ -51,6 +50,7 @@
     "radix-vue": "^1.8.0",
     "sass": "^1.77.0",
     "slugify": "^1.6.6",
+    "typescript": "^5.4.5",
     "unplugin-icons": "^0.19.0",
     "unplugin-vue-components": "^0.27.0"
   }
