--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@tiptap/extension-focus": "^2.4.0",
     "@tiptap/extension-heading": "^2.4.0",
     "@tiptap/extension-history": "^2.4.0",
+    "@tiptap/extension-horizontal-rule": "^2.4.0",
     "@tiptap/extension-italic": "^2.4.0",
     "@tiptap/extension-link": "^2.4.0",
     "@tiptap/extension-list-item": "^2.4.0",
