--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev --host 0.0.0.0",
+    "dev": "doppler run --mount .env -- nuxt dev --host 0.0.0.0",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -50,6 +50,7 @@
     "photoswipe": "^5.4.3",
     "radix-vue": "^1.8.0",
     "sass": "^1.77.0",
+    "scrollyfills": "^1.0.1",
     "slugify": "^1.6.6",
     "typescript": "^5.4.5",
     "unplugin-icons": "^0.19.0",
