--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "radix-vue": "^1.8.0",
     "sass": "^1.77.0",
     "slugify": "^1.6.6",
+    "telegram": "^2.22.2",
     "typescript": "^5.4.5",
     "unplugin-icons": "^0.19.0",
     "unplugin-vue-components": "^0.27.0"
