--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev --host 0.0.0.0",
+    "dev": "doppler run --mount .env -- nuxt dev --host 0.0.0.0",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -48,10 +48,10 @@
     "eslint": "^9.2.0",
     "file-type": "^19.3.0",
     "h3-formidable": "^1.0.0",
-    "nuxt-swiper": "^1.2.2",
     "radix-vue": "^1.8.0",
     "sass": "^1.77.0",
     "slugify": "^1.6.6",
+    "swiper": "^11.1.9",
     "telegram": "^2.22.2",
     "typescript": "^5.4.5",
     "unplugin-icons": "^0.19.0",
