--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "telegram": "^2.22.2",
     "typescript": "^5.4.5",
     "unplugin-icons": "^0.19.0",
-    "unplugin-vue-components": "^0.27.0"
+    "unplugin-vue-components": "^0.27.0",
+    "vue-use-spring": "^0.3.3"
   }
 }
