--- a/package.json
+++ b/package.json
@@ -22,24 +22,24 @@
     "@nuxt/image": "^1.7.0",
     "@nuxtjs/supabase": "^1.2.2",
     "@nuxtjs/tailwindcss": "^6.12.0",
-    "@tiptap/core": "^2.5.6",
-    "@tiptap/extension-bold": "^2.5.6",
-    "@tiptap/extension-bullet-list": "^2.5.6",
-    "@tiptap/extension-dropcursor": "^2.5.6",
-    "@tiptap/extension-heading": "^2.5.6",
-    "@tiptap/extension-history": "^2.5.6",
-    "@tiptap/extension-horizontal-rule": "^2.5.6",
-    "@tiptap/extension-italic": "^2.5.6",
-    "@tiptap/extension-link": "^2.5.6",
-    "@tiptap/extension-list-item": "^2.5.6",
-    "@tiptap/extension-ordered-list": "^2.5.6",
-    "@tiptap/extension-paragraph": "^2.5.6",
-    "@tiptap/extension-placeholder": "^2.5.6",
-    "@tiptap/extension-strike": "^2.5.6",
-    "@tiptap/extension-text": "^2.5.6",
-    "@tiptap/extension-underline": "^2.5.6",
-    "@tiptap/pm": "^2.5.6",
-    "@tiptap/vue-3": "^2.5.6",
+    "@tiptap/core": "2.4.0",
+    "@tiptap/extension-bold": "2.4.0",
+    "@tiptap/extension-bullet-list": "2.4.0",
+    "@tiptap/extension-dropcursor": "2.4.0",
+    "@tiptap/extension-heading": "2.4.0",
+    "@tiptap/extension-history": "2.4.0",
+    "@tiptap/extension-horizontal-rule": "2.4.0",
+    "@tiptap/extension-italic": "2.4.0",
+    "@tiptap/extension-link": "2.4.0",
+    "@tiptap/extension-list-item": "2.4.0",
+    "@tiptap/extension-ordered-list": "2.4.0",
+    "@tiptap/extension-paragraph": "2.4.0",
+    "@tiptap/extension-placeholder": "2.4.0",
+    "@tiptap/extension-strike": "2.4.0",
+    "@tiptap/extension-text": "2.4.0",
+    "@tiptap/extension-underline": "2.4.0",
+    "@tiptap/pm": "2.4.0",
+    "@tiptap/vue-3": "2.4.0",
     "@types/formidable": "^3.4.5",
     "@use-gesture/vanilla": "^10.3.1",
     "@vueuse/nuxt": "^10.9.0",
