--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@iconify-json/tabler": "^1.1.111",
     "@nuxt/fonts": "^0.7.0",
     "@nuxt/image": "^1.7.0",
+    "@nuxt/scripts": "0.9.4",
     "@nuxtjs/supabase": "^1.2.2",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@tiptap/core": "2.4.0",
