--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@tiptap/extension-underline": "2.4.0",
     "@tiptap/pm": "2.4.0",
     "@tiptap/vue-3": "2.4.0",
+    "@types/fluent-ffmpeg": "^2.1.26",
     "@types/formidable": "^3.4.5",
     "@use-gesture/vanilla": "^10.3.1",
     "@vueuse/nuxt": "^10.9.0",
@@ -48,12 +49,15 @@
     "dayjs-nuxt": "^2.1.9",
     "eslint": "^9.2.0",
     "file-type": "^19.3.0",
+    "fluent-ffmpeg": "^2.1.3",
     "h3-formidable": "^1.0.0",
     "radix-vue": "^1.8.0",
     "sass": "^1.77.0",
+    "sharp": "^0.33.5",
     "slugify": "^1.6.6",
     "swiper": "^11.1.9",
     "telegram": "^2.22.2",
+    "tmp": "^0.2.3",
     "typescript": "^5.4.5",
     "unplugin-icons": "^0.19.0",
     "unplugin-vue-components": "^0.27.0",
