--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint": "^9.2.0",
     "file-type": "^19.3.0",
     "fluent-ffmpeg": "^2.1.3",
+    "gifwrap": "^0.10.1",
     "radix-vue": "^1.8.0",
     "sass": "^1.77.0",
     "sharp": "^0.33.5",
