--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "file-type": "^19.3.0",
     "fluent-ffmpeg": "^2.1.3",
     "gifwrap": "^0.10.1",
+    "h3-zod": "^0.5.3",
     "radix-vue": "^1.8.0",
     "sass": "^1.77.0",
     "sharp": "^0.33.5",
@@ -63,6 +64,7 @@
     "unplugin-vue-components": "^0.27.0",
     "vite-plugin-mkcert": "^1.17.6",
     "vue-use-spring": "^0.3.3",
-    "vuedraggable": "^4.1.0"
+    "vuedraggable": "^4.1.0",
+    "zod": "^3.23.8"
   }
 }
