--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@tiptap/vue-3": "2.4.0",
     "@types/fluent-ffmpeg": "^2.1.26",
     "@types/formidable": "^3.4.5",
+    "@types/lodash": "^4.17.10",
     "@types/tmp": "^0.2.6",
     "@use-gesture/vanilla": "^10.3.1",
     "@vueuse/nuxt": "^10.9.0",
@@ -50,8 +51,8 @@
     "eslint": "^9.2.0",
     "file-type": "^19.3.0",
     "fluent-ffmpeg": "^2.1.3",
-    "gifwrap": "^0.10.1",
     "h3-zod": "^0.5.3",
+    "lodash": "^4.17.21",
     "radix-vue": "^1.8.0",
     "sass": "^1.77.0",
     "sharp": "^0.33.5",
