--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "doppler run --mount .env -- nuxt dev --host 0.0.0.0",
+    "dev": "nuxt dev --host",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -45,13 +45,14 @@
     "@types/formidable": "^3.4.5",
     "@types/tmp": "^0.2.6",
     "@use-gesture/vanilla": "^10.3.1",
+    "@vueuse/components": "^11.1.0",
     "@vueuse/nuxt": "^10.9.0",
     "dayjs-nuxt": "^2.1.9",
     "eslint": "^9.2.0",
     "file-type": "^19.3.0",
     "fluent-ffmpeg": "^2.1.3",
     "gifwrap": "^0.10.1",
-    "radix-vue": "^1.8.0",
+    "radix-vue": "^1.9.7",
     "sass": "^1.77.0",
     "sharp": "^0.33.5",
     "slugify": "^1.6.6",
@@ -61,6 +62,7 @@
     "typescript": "^5.4.5",
     "unplugin-icons": "^0.19.0",
     "unplugin-vue-components": "^0.27.0",
+    "vaul-vue": "^0.2.0",
     "vite-plugin-mkcert": "^1.17.6",
     "vue-use-spring": "^0.3.3",
     "vuedraggable": "^4.1.0"
