--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "h3-zod": "^0.5.3",
     "lodash": "^4.17.21",
     "radix-vue": "^1.9.7",
+    "react-tweet": "^3.2.1",
     "sass": "^1.77.0",
     "sharp": "^0.33.5",
     "slugify": "^1.6.6",
