--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "fluent-ffmpeg": "^2.1.3",
     "h3-zod": "^0.5.3",
     "lodash": "^4.17.21",
+    "nuxt-api-shield": "^0.8.0",
     "radix-vue": "^1.9.9",
     "react-tweet": "^3.2.1",
     "sass": "^1.77.0",
